# SALEc-2D-public

./: CMakeLists.txt  README.md
eos/: eos-help.txt
example/: Potter2015.inp  d112v110p05.inp  r1000v140b300e3.inp  sup_asteroid.inp  sup_material.inp  utopia.inp
src/: advect.c  construct.c  ejecta.c  ejecta.h  sale2d.c  sale2d.h  sale2d_back.c  sale2d_constant.h  salec2d.c  strength.c  strength.h  target_profile.c  target_profile.h  tracer.c  tracer.h  velocity.c  write_vtk.c  write_vtk.h
src/eos/: aneos_sieden.c  eos_state.c  eos_state.h
src/geometry/: interpolate.c  interpolate.h  interpolate_2d9.c  interpolate_2d9.h  interpolate_fn.c  interpolate_fn.h  linear.c  linear.h
src/io/: InputParser.c  InputParser.h  generate_input.c  iSALEInputParser.c  iSALEInputParser.h  output.c  output.h
src/mpi_vec/: index_var.c  index_var.h  linked_list.c  linked_list.h  mpi_vec.c  mpi_vec.h  mpi_vec_ght.c  mpi_vec_types.h
src/other/: merge_vts.c  test_functions.c
